
[tool.poetry]
name = "pythonProject12"
version = "0.1.0"
description = ""
authors = ["Max2Morozov <max2morozov@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"